# asgard

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  asgard.toml  crator.toml  deny.toml
.github/workflows/: ci.yml
migrations/: V1__users.sql
src/: main.rs  models.rs  settings.rs  templates.rs
src/api/: error.rs  filters.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/db/: connection.rs  migrations.rs  mod.rs
src/index/: README.md  mod.rs  models.rs
src/storage/: mod.rs
src/ui/: filters.rs  handlers.rs  routes.rs
templates/: base.html  index.html  me.html
