[package]
name = "asgard"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
description = "A lightweight Cargo package registry"
homepage = "https://github.com/dnaka91/asgard"
repository = "https://github.com/dnaka91/asgard"
keywords = ["crates"]

[dependencies]
anyhow = "1.0.57"
askama = { version = "0.11.1", default-features = false, features = ["with-warp"] }
askama_warp = "0.12.0"
async-trait = "0.1.53"
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
git2 = { version = "0.14.4", features = ["vendored-libgit2", "vendored-openssl"] }
hex = "0.4.3"
hyper = "0.14.18"
log = "0.4.17"
parking_lot = "0.12.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
refinery = { version = "0.8.4", features = ["rusqlite"] }
rusqlite = { version = "0.26.3", features = ["bundled"] }
semver = { version = "1.0.9", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
toml = "0.5.9"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
url = { version = "2.2.2", features = ["serde"] }
warp = { version = "0.3.2", default-features = false }

[profile.release]
lto = true
strip = true

[dev-dependencies]
maplit = "1.0.2"
tempfile = "3.3.0"
