[package]
name = "asgard"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
description = "A lightweight Cargo package registry"
homepage = "https://github.com/dnaka91/asgard"
repository = "https://github.com/dnaka91/asgard"
keywords = ["crates"]

[dependencies]
anyhow = "1.0.62"
askama = { version = "0.11.1", default-features = false, features = ["with-warp"] }
askama_warp = "0.12.0"
async-trait = "0.1.57"
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
git2 = { version = "0.15.0", features = ["vendored-libgit2", "vendored-openssl"] }
hex = "0.4.3"
hyper = "0.14.20"
log = "0.4.17"
parking_lot = "0.12.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.19.0"
refinery = { version = "0.8.6", features = ["rusqlite"] }
rusqlite = { version = "0.26.3", features = ["bundled"] }
semver = { version = "1.0.13", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10.2"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = { version = "2.2.2", features = ["serde"] }
warp = { version = "0.3.2", default-features = false }

[profile.release]
lto = true
strip = true

[dev-dependencies]
maplit = "1.0.2"
tempfile = "3.3.0"
